privacy butler's presentation is now avaliable

--- a/privacybutler/index.html
+++ b/privacybutler/index.html
@@ -44,7 +44,7 @@
   <img class="headpic"src="assets/img/logo.svg" />
   <h1 class="tagline">Stay Loud, Stay Safe.</h1>
 
-  <h6 class="procredit">Project Advisor: <a href="http://www.haakonfaste.com/" style="font-weight:500; text-decoration:underline">Haakon Faste</a>, <a href="http://sodelightful.com/" style="font-weight:500; text-decoration:underline">Christina Tran</a>, <a href="http://www.aynne.info" style="font-weight:500; text-decoration:underline">Aynne Valencia</a>, <a href="https://www.ideo.com/people/kristian-simsarian" style="font-weight:500; text-decoration:underline">Kristian Simsarian</a></h6>
+  <h6 class="procredit">Project Advisor: <a href="http://www.haakonfaste.com/" style="font-weight:500; text-decoration:underline"  target="_blank">Haakon Faste</a>, <a href="http://sodelightful.com/" style="font-weight:500; text-decoration:underline"  target="_blank">Christina Tran</a>, <a href="http://www.aynne.info" style="font-weight:500; text-decoration:underline"  target="_blank">Aynne Valencia</a>, <a href="https://www.ideo.com/people/kristian-simsarian" style="font-weight:500; text-decoration:underline"  target="_blank">Kristian Simsarian</a></h6>
   <!-- <h3 id="elevatorpitch">For Virgin Airlines flyers who travels frequently, 24.7MIXX is a new internet channel that allows subscribers to play music anywhere. Unlike most other music streaming services, 24.7MIXX continuously streams music even in the aircraft.</h3> -->
 
   <p class="description mapdescription"><span class="hilight">PrivacyButler is a mobile application</span> that makes social activists less likely to be targeted by big corporations and the government via securing their online presence.
@@ -164,15 +164,27 @@
 </div>
 
 <div id="presentation">
-<h2 class="parttitle">PRESENTATION</h2>
-<p class="description"><span class="hilight">coming soon</span></p>
-</div>
+<h2 class="parttitle" style="margin-bottom:50px;">PRESENTATION</h2>
+<div class="videoWrapper">
+     <iframe src="https://www.youtube.com/embed/iFjd3t_tyMQ" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 
-<!-- <div id="appendix">
-<h2 class="parttitle">APPENDIX</h2>
-<p class="description mapdescription">Research information is from: <span class="hilight">Interviewing users</span><br />Photos are from <span class="hilight">internet + Virgin America</span><br /><br /><br /></p>
+
+ </div>
+ <!--  <div class="gallery" style="margin-top:-18%;">
+    <p class="description" style="text-align: center;"><span class="hilight">Other Work:</span></p>
+    <div><img class="imgingrid" src="assets/img/field1.png" alt="privacy butler" ></img></div>
+    <div><img class="imgingrid" src="assets/img/field2.png" alt="privacy butler" ></img></div>
+    <div><img class="imgingrid" src="assets/img/field3.png" alt="privacy butler" ></img></div>
+    <div><img class="imgingrid" src="assets/img/field4.png" alt="privacy butler" ></img></div>
+  </div>
 
 </div> -->
+
+<div id="appendix" style="margin-top:-18%;">
+<h2 class="parttitle">APPENDIX</h2>
+<p class="description mapdescription">Research information is from: <span class="hilight">Interviewing users and privacy experts</span><br />Photos are from <span class="hilight">internet + photos that I documented</span><br /><br /><br /></p>
+
+</div>
 
    
 
