--- a/privacybutler/index.html
+++ b/privacybutler/index.html
@@ -50,7 +50,7 @@
   <p class="description mapdescription"><span class="hilight">PrivacyButler is a mobile application</span> that makes social activists less likely to be targeted by big corporations and the government via securing their online presence.
   </p>
 
-  <p class="description mapdescription"><span class="hilight">Date:</span> Spet 2016 - May 2017 <br /> <span class="hilight">Skills Developed:</span>  UI Design, Branding,  <br /><span class="hilight"> Learnings: </span><br />• Learned how to analyze brand personality <br />• Honed UI design with tools including Sketch, inVision, and illustrator <br />• Created an APP that unified the visual styles and screen sizes
+  <p class="description mapdescription"><span class="hilight">Date:</span> Spet 2016 - May 2017 <br /> <span class="hilight">Skills Developed:</span>  UI Design, Branding,  <br /><span class="hilight"> Learnings: </span><br />• Learned how to analyze brand personality <br />• Honed UI design with tools including Sketch, inVision, and illustrator <br />• Created an APP that unified the visual styles and screen sizes<br />• <a href="#presentation" ><span class="hilight" style="color:#06D506; text-decoration: underline;">Watch my presentation</span></a>
   </p>
 
   <!-- <h4 class="quotation">“There’s little things that happen every day. What can you as interaction designers do with things that happen every day, how can you make these little boring things exciting.” <br/>-Aynne Valencia (Instructor)</h4> -->
